--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Eye of the Necromancer.inform/Index
 Eye of the Necromancer.inform/Settings.plist
 Eye of the Necromancer.inform/Skein.skein
 Eye of the Necromancer.inform/notes.rtf
+inform6/*.txt
+inform6/zcode/*.z*
